[package]
name = "hayagriva"
version = "0.5.1"
authors = ["Martin Haug <mhaug@live.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Work with references: Literature database management, storage, and citation formatting"
repository = "https://github.com/typst/hayagriva"
readme = "README.md"
categories = ["template-engine", "value-formatting", "command-line-utilities"]
keywords = ["bibliography", "citation", "reference", "bibtex", "literature"]

[features]
default = ["biblatex", "archive"]
cli = ["clap", "strum"]
archive = ["ciborium"]
csl-json = ["citationberg/json"]

[dependencies]
citationberg = "0.1.1"
indexmap = { version = "2.0.2", features = ["serde"] }
numerals = "0.1.4"
paste = "1.0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.48"
unic-langid = { version = "0.9.0", features = ["serde"] }
unicode-segmentation = "1.6.0"
unscanny = "0.1.0"
url = { version =  "2.4", features = ["serde"] }
biblatex = { version = "0.9", optional = true }
ciborium = { version = "0.2.1", optional = true }
clap = { version = "3.1", optional = true, features = ["cargo"] }
strum = { version = "0.25", features = ["derive"], optional = true }

[dev-dependencies]
heck = "0.4"
serde_json = "1"

[[bin]]
name = "hayagriva"
required-features = ["cli"]

[[test]]
name = "citeproc"
path = "tests/citeproc.rs"
required-features = ["csl-json"]
