[package]
name = "hayagriva"
version = "0.8.1"
authors = ["Martin Haug <mhaug@live.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Work with references: Literature database management, storage, and citation formatting"
repository = "https://github.com/typst/hayagriva"
readme = "README.md"
categories = ["template-engine", "value-formatting", "command-line-utilities"]
keywords = ["bibliography", "citation", "reference", "bibtex", "literature"]

[features]
default = ["biblatex", "archive"]
cli = ["clap", "strum"]
archive = ["ciborium"]
csl-json = ["citationberg/json"]

[dependencies]
citationberg = { git = "https://github.com/typst/citationberg.git", rev = "744e0f3882bb53ae2395340e33d7e533646adf78" }
indexmap = { version = "2.0.2", features = ["serde"] }
numerals = "0.1.4"
paste = "1.0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "2.0.16"
unic-langid = { version = "0.9.6", features = ["serde"] }
unicode-segmentation = "1.6.0"
unscanny = "0.1.0"
url = { version = "2.4", features = ["serde"] }
biblatex = { git = "https://github.com/typst/biblatex.git", rev = "abb77bd", features = [
  "unic-langid",
], optional = true }
ciborium = { version = "0.2.1", optional = true }
clap = { version = "4", optional = true, features = ["cargo"] }
strum = { version = "0.26", features = ["derive"], optional = true }

[dev-dependencies]
heck = "0.5"
serde_json = "1"
regex = "1"

[[bin]]
name = "hayagriva"
required-features = ["cli"]

[[test]]
name = "citeproc"
path = "tests/citeproc.rs"
required-features = ["csl-json"]
