[package]
name = "hayagriva-cli"
version = "0.1.0"
authors = ["Martin Haug <mhaug@live.de>"]
edition = "2018"

[dependencies]
hayagriva = { path = ".." }
biblatex = { path = "../../biblatex" }
clap = "2.33.3"
strum = { version = "0.20", features = ["derive"] }

[[bin]]
name = "hayagriva-main"
path = "main.rs"
